# mader

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: tests.yml
mader/: app.py  database.py  handlers.py  models.py  schemas.py  security.py  settings.py
mader/routers/: auth.py  authors.py  books.py  users.py
migrations/: env.py
migrations/versions/: 3cd485e0a277_init.py
tests/: conftest.py  test_auth.py  test_authors.py  test_books.py  test_db.py  test_users.py
