[project]
name = "mader"
version = "0.1.0"
description = ""
authors = [
    {name = "gabrielsrs",email = "gabrielsrs@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.120.2,<0.121.0)",
    "pydantic[email] (>=2.12.4,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
