[project]
name = "mader"
version = "0.1.0"
description = ""
authors = [
    {name = "gabrielsrs",email = "gabrielsrs@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.120.2,<0.121.0)",
    "pydantic[email] (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
